--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -70,7 +70,7 @@
                             <i class="fa fa-shield" aria-hidden="true"></i> Oficiales
                         </a>
                     </li>
-                    <li>
+                    <li ui-sref="watches()">
                         <a href="">
                             <i class="fa fa-clock-o" aria-hidden="true"></i> Turnos
                         </a>
