--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -114,6 +114,8 @@
 <script src="../../assets/global/scripts/officerController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/accessController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/residentAdministrationController.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/watchesFactory.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/watchesController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/bootbox.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js "></script>
