--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -17,7 +17,7 @@
 	<link href="../../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-
+  <link rel="stylesheet" type="text/css" href="../../assets/global/plugins/bootstrap-colorpicker/css/colorpicker.css"/>
 	<!-- END GLOBAL MANDATORY STYLES -->
 	<!-- BEGIN THEME STYLES -->
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
@@ -125,6 +125,7 @@
 <script src="../../assets/admin/pages/scripts/components-pickers.js "></script>
 <script type="text/javascript " src="../../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js "></script>
 <script type="text/javascript " src="../../assets/global/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js "></script>
+<script type="text/javascript" src="../../assets/global/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
 <script src="../../assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js " type="text/javascript "></script>
 <script src="../../assets/global/scripts/bower_components/angular-resource/angular-resource.js "></script>
 <script src="../../assets/global/scripts/bower_components/angular-cookie/angular-cookie.js "></script>
