--- a/frontend/templates/admin/house/index.html
+++ b/frontend/templates/admin/house/index.html
@@ -51,7 +51,7 @@
                         <tbody>
                             <tr ng-repeat="house in houses | filter:search">
                                 <td>{{house.house_number}}</td>
-                                <td>{{house.extension}}</td>
+                                <td>{{house.id}}</td>
                                 <td><a ng-click="getKeys(house.house_number,house.securityKey,house.emergencyKey)">Ver claves de seguridad</a></td>
                                 <td> <a ui-sref="editHouse({id:house.id})">Editar</a></td>
                                 <td> <a ng-click="deleteHouse(house.id,house.house_number)">Eliminar</a></td>
