--- a/frontend/templates/Residents/formResident.html
+++ b/frontend/templates/Residents/formResident.html
@@ -17,76 +17,89 @@
         <div class="btn-group pull-right"> </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-12">
-        <form ng-submit="actionButton()">
-            <div class="portlet light bordered">
-                <div class="portlet-title">
-                    <div class="caption font-green-haze">
-                        <i class="fa fa-user font-green-haze"></i>
-                        <span class="caption-subject bold uppercase">{{title}}</span>
-                    </div>
-                    <div class="actions">
-                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
-                    </div>
-                </div>
-                <div class="portlet-body form display-none" id="register_edit_form">
+<div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+    <h1 class="text-center">
+        <img src="../../assets/global/img/loader4.gif" alt="" />
 
-                    <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
-                    <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new gray-font">Subir imagen</label></h3>
-                    <input type='file' id="imgInp" />
-                    <div class="col-md-6 col-sm-6 marging-top-20">
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="name" type="text" class="form-control letters gray-font" required>
-                            <label for="form_control_1" class="font-15">Nombre</label>
+    </h1>
+</div>
+<div class="display-none" id="edit_resident_form">
+    <div class="row">
+        <div class="col-md-12">
+            <form ng-submit="actionButton()">
+                <div class="portlet light bordered">
+                    <div class="portlet-title">
+                        <div class="caption font-green-haze">
+                            <i class="fa fa-user font-green-haze"></i>
+                            <span class="caption-subject bold uppercase">{{title}}</span>
                         </div>
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="last_name" type="text" class="form-control letters gray-font" required>
-                            <label for="form_control_1" class="font-15">Primer Apellido</label>
-                        </div>
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="second_last_name" type="text" class="form-control letters gray-font" required>
-                            <label for="form_control_1" class="font-15">Segundo Apellido</label>
-                        </div>
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="identification_number" type="text" class="form-control numbers gray-font" required>
-                            <label for="form_control_1" class="font-15">Número de cédula</label>
+                        <div class="actions">
+                            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
                         </div>
                     </div>
+                    <div class="portlet-body form display-none" id="register_edit_form">
 
-                    <div class="col-md-6 col-sm-6  marging-top-20">
-                        <div class="form-group form-md-line-input">
-                            <input ng-model="birthday" type="text" class="form-control date-picker gray-font" id="form_control_2" placeholder="" required>
-                            <label for="form_control_1" class="font-15">Fecha de nacimiento</label>
+                        <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
+                        <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new gray-font">Subir imagen</label></h3>
+                        <input type='file' id="imgInp" />
+                        <div class="col-md-6 col-sm-6 marging-top-20">
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="name" type="text" class="form-control letters gray-font" required>
+                                <label for="form_control_1" class="font-15">Nombre</label>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="last_name" type="text" class="form-control letters gray-font" required>
+                                <label for="form_control_1" class="font-15">Primer Apellido</label>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="second_last_name" type="text" class="form-control letters gray-font" required>
+                                <label for="form_control_1" class="font-15">Segundo Apellido</label>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="identification_number" type="text" class="form-control numbers gray-font" required>
+                                <label for="form_control_1" class="font-15">Número de cédula</label>
+                            </div>
                         </div>
 
-                        <div class="form-group form-md-line-input">
-                            <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control numbers gray-font" id="form_control_1" required>
-                            <label for="form_control_1" class="font-15">Número celular</label>
-                        </div>
-                        <div class="form-group form-md-line-input ">
-                            <input ng-model="email" type="email" class="form-control gray-font" placeholder="" id="form_control_1" required>
-                            <label for="form_control_1" class="font-15">Correo electrónico</label>
-                        </div>
+                        <div class="col-md-6 col-sm-6  marging-top-20">
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="birthday" type="text" class="form-control date-picker gray-font" id="form_control_2" placeholder="" required>
+                                <label for="form_control_1" class="font-15">Fecha de nacimiento</label>
+                            </div>
 
-                    </div>
-                    <div class="height-12-percent col-md-6 col-sm-6 hidden-xs"></div>
-                    <div class="form-actions noborder ">
-                        <h3 class="text-right ">
+                            <div class="form-group form-md-line-input">
+                                <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control numbers gray-font" id="form_control_1" required>
+                                <label for="form_control_1" class="font-15">Número celular</label>
+                            </div>
+                            <div class="form-group form-md-line-input ">
+                                <input ng-model="email" type="email" class="form-control gray-font" placeholder="" id="form_control_1" required>
+                                <label for="form_control_1" class="font-15">Correo electrónico</label>
+                            </div>
+
+                        </div>
+                        <div class="height-12-percent col-md-6 col-sm-6 hidden-xs"></div>
+                        <div class="form-actions noborder ">
+                            <h3 class="text-right ">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil "></i> {{button}}</button>
                             <button type="button" ui-sref="condominos()" class="btn red default">Cancelar</button>
                           </h3>
-                    </div>
+                        </div>
 
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 
 </div>
 <script>
     jQuery(document).ready(function() {
-        $("#register_edit_form").fadeIn("slow");
+        $("#loadingIcon").fadeIn("slow");
+    });
+</script>
+<script>
+    jQuery(document).ready(function() {
+        $("#register_edit_form").fadeIn(800);
     });
 </script>
 <script type="text/javascript ">
