--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -119,7 +119,7 @@
                             <i class="fa fa-user" aria-hidden="true"></i> Visitante
                         </a>
                     </li>
-                    <li>
+                    <li ui-sref="homeService()" ng-class="{'active' : active === 'residentsVisitors'}">
                         <a href="">
                             <i class="fa fa-cutlery" aria-hidden="true"></i> Servicio a domicilio
                         </a>
